# wiki-gap-finder

./: .gitignore  LICENSE  README.md  gap_finder.py  pyproject.toml
campaigns/: disability-pride-2026.yaml
data/: rsp_seed.json
docs/superpowers/plans/: 2026-07-03-source-vetter.md
docs/superpowers/specs/: 2026-07-03-source-vetter-design.md
gapfinder/: __init__.py  cli.py  contract.py  dossier.py  rsp.py  search.py  verdicts.py  worklist.py
gapfinder/schemas/: verdicts.schema.json  worklist.schema.json
input/: candidates.csv
scripts/: build_skill.sh
skills/vet-sources/: SKILL.md
tests/: conftest.py  test_cli_integration.py  test_contract.py  test_dossier.py  test_end_to_end.py  test_gap_check.py  test_polite_session.py  test_rsp.py  test_search.py  test_verdicts.py  test_worklist.py
tests/fixtures/: ddg_result.html  verdicts_sample.json  worklist_sample.json
